Add AdvantageKit + Spotless; Run spotless formatter (#1)
* Add AdvantageKit + Spotless; Run spotless formatter

* Update CI to check formatting

* Fix CI running twice on PRs

* Log Swerve Module States and Odometry to AdvantageKit

* fixup! Log Swerve Module States and Odometry to AdvantageKit

* Run spotless

Co-authored-by: Akhil Datla <66145155+akhil-datla@users.noreply.github.com>
Co-authored-by: Vivek Nadig <54611298+Savimaster@users.noreply.github.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,19 @@
-name: CI
+name: Build
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch.
-on: push
+on:
+  push:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # This grabs the WPILib docker container
-    container: wpilib/roborio-cross-ubuntu:2022-18.04
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    name: Build
+    runs-on: ubuntu-22.04
+    container: wpilib/roborio-cross-ubuntu:2023-22.04
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Grant execute permission for gradlew
-      - name: Grant execute permission for gradlew
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Grant execute permission
         run: chmod +x gradlew
-
-      # Runs a single command using the runners shell
-      - name: Compile and run tests on robot code
+      - name: Check formatting
+        run: ./gradlew spotlessCheck
+      - name: Build and test
         run: ./gradlew build
