--- a/.gitignore
+++ b/.gitignore
@@ -219,6 +219,7 @@ local.properties
 
 # AdvantageKit
 src/main/java/frc/robot/BuildConstants.java
+**/*/BuildConstants.java
 
 **/*/.DS_Store
 .datalogtool/*
