Feat/add auto code (#34)
* Added helper and auto file into the newly named file [auto], changed most of the variable that caused errors,added more variable in the autoConstants class in class Constants, also added Commands folder and the content from 2022 repo, 2 errors on line 238 and 246 regarding the getKinematics vairable in TrajectoryFactory.java class of auto of frc.robot, 4 errors on drive variable on line 177,195,214,and 230 TrajactoryFactory class of auto of frc.robot.

* Fixed most of the errors by removing and adding some code after adding the auto code, decided to leave out getKinematics() in TrajectoryFactory as Advay mentioned that we will merge and use a different swerve classes.

* Removed extraneous comments, migrated functions from 2022 repo, and added old constants

* Removed extraneous TODO comment

* Delete DS_Store and add to gitignore

* Removed TrajectoryFactory and ThetaController

* Feat/add auto path marker integration (#52)

* Add team 254's falcon swerve module (#36)

* Add team 254's falcon swerve module

* Create CanDeviceId.java

Nice CanDeviceId wrapper as a util

* Create TalonUtil.java

Talon error checker with codes, convenient

* Change Class Name

change name from module254 to just module.

* Update Constants.java

change constants to fit with talon fx factory. they are misplaced but this is temporary. refactore later.

* Create LazyTalonFX.java

Nice util to lazily create TalonFX

* 254 Talon FX Factory

We love 254 !!

* Update FalconSwerveModule.java

Fix erros in FalconSwerveModule

* Fix a glitch

Co-authored-by: 3LucasZ <lucas.zheng@warriorlife.net>

* Refactor auto command runner to use path planner marker

* Add initial auto builder code

* Remove BuildConstants.java

Co-authored-by: samuel <116925676+memori034@users.noreply.github.com>
Co-authored-by: 3LucasZ <lucas.zheng@warriorlife.net>

* Remove BuildConstants.java

* Fix auto constant names

* Delete .fa

--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,7 @@ local.properties
 
 # AdvantageKit
 src/main/java/frc/robot/BuildConstants.java
+**/*/BuildConstants.java
+
+**/*/.DS_Store
+.datalogtool/*
