--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,5 @@ local.properties
 
 *.wpilog
 src/main/java/frc/robot/BuildConstants.java
+src/main/java/frc/robot/BuildConstants.java
+/src/main/java/frc/robot/BuildConstants.java
