--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Grant execute permission
         run: chmod +x gradlew
-      - name: Check formatting
+      - name: Spotless Check
         run: ./gradlew spotlessCheck
-      - name: Build and test
+      - name: Spotless Apply
+        run: ./gradlew :spotlessAppl
+      - name: Build
         run: ./gradlew build
