--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ repositories {
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 5.
 dependencies {
+    implementation 'org.apache.commons:commons-io:1.3.2'
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
 
