Make NodeType Enum

--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ deploy {
             debug = project.frc.getDebugOrDefault(false)
 
             artifacts {
-                // First part is artifact name, 2nd is artifact type
-                // getTargetTypeClass is a shortcut to get the class type using a string
+                // First part is artifact name, 2nd is artifact nodeType
+                // getTargetTypeClass is a shortcut to get the class nodeType using a string
 
                 frcJava(getArtifactTypeClass('FRCJavaArtifact')) {
                 }
