--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ deploy {
             debug = project.frc.getDebugOrDefault(false)
 
             artifacts {
-                // First part is artifact name, 2nd is artifact type
-                // getTargetTypeClass is a shortcut to get the class type using a string
+                // First part is artifact name, 2nd is artifact nodeType
+                // getTargetTypeClass is a shortcut to get the class nodeType using a string
 
                 frcJava(getArtifactTypeClass('FRCJavaArtifact')) {
                 }
@@ -60,6 +60,7 @@ repositories {
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 5.
 dependencies {
+    implementation 'org.apache.commons:commons-io:1.3.2'
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
 
