--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     annotationProcessor "org.littletonrobotics.akit.junction:junction-autolog:2.0.0"
+    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 }
 
 test {
