Add Kalman filter adjustment based on distance from April Tag (#12)
* Add Kalman filter adjustment based on distance from April Tag to improve odometry

* Clean up localize

* Run spotless

* Add code to collect std data

* Fix april tag distance calculation

* Add training points

* Run spotless

* Add last data point

* Fix offsets

* Remove shouldAddVisionMeasurement function

* Fix pr review

* Add comments

* Increase kSwervePoseEstimatorMaxValue

* fix: clamp function

* Run spotless

---------

Co-authored-by: Aditya Pawar <34043950+adityapawar1@users.noreply.github.com>
Co-authored-by: Aditya Pawar <aditya.pawar@warriorlife.net>

--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     annotationProcessor "org.littletonrobotics.akit.junction:junction-autolog:2.0.0"
+
+    //Apache Commons Math - For Curve Fitting
+    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 }
 
 test {
